<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowcaseActivity">

    <github.com.st235.lib_swipetoactionlayout.SwipeToActionLayout
        android:id="@+id/swipeToActionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/swipe_to_action"
            android:textColor="#fff"
            android:textSize="32sp" />

    </github.com.st235.lib_swipetoactionlayout.SwipeToActionLayout>

    <CheckBox
        android:id="@+id/vibrateCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/vibrate_on_quick_action" />

    <CheckBox
        android:id="@+id/quickActionCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/allow_quick_action" />

    <st235.com.github.flow_layout.FlowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gravity_left" />

        <Button
            android:id="@+id/right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gravity_right" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gravity_start" />

        <Button
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gravity_end" />

    </st235.com.github.flow_layout.FlowLayout>

    <st235.com.github.flow_layout.FlowLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/open"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open" />

        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close" />

        <Button
            android:id="@+id/openFully"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_fully" />

    </st235.com.github.flow_layout.FlowLayout>

</LinearLayout>